# diligent-playground

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  diligent-playground.sublime-project
assets/shaders/solids/: solid.fxh  solid.psh
cmake/: cinder-lite.cmake
scripts/: run_cmake.bat  run_cmake.sh
src/: CMakeLists.txt
src/juniper/: AppBasic.cpp  AppBasic.h  AppEvents.cpp  AppEvents.h  AppGlfw.cpp  AppGlfw.h  AppGlobal.cpp  AppGlobal.h  Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  FileWatch.h  FlyCam.cpp  FlyCam.h  ImGuiImplGlfw.cpp  ImGuiImplGlfw.h  Juniper.h  LivePP.cpp  LivePP.h  Profiler.cpp  Profiler.h  Solids.cpp  Solids.h
src/juniper/post/aa/: FXAA.cpp  FXAA.h
test/: CMakeLists.txt
test/CubeTest/: CMakeLists.txt
test/CubeTest/src/: CubeTestApp.cpp
test/HelloTriangle/: CMakeLists.txt
test/HelloTriangle/src/: HelloTriangleApp.cpp
test/glfw/AppBasic/: CMakeLists.txt
test/glfw/AppBasic/src/: AppBasic.cpp  AppBasic.h  AppGlfw.cpp  AppGlfw.h
test/glfw/BasicTests/: CMakeLists.txt  readme.md
test/glfw/BasicTests/src/: BasicTests.cpp  BasicTests.h
test/gx/CubeTest/: CMakeLists.txt
test/gx/CubeTest/src/: CubeTestApp.cpp
test/gx/HelloTriangle/: CMakeLists.txt
test/standalone/: CMakeLists.txt
test/standalone/ComputeParticles/: CMakeLists.txt  readme.md
test/standalone/ComputeParticles/assets/shaders/canvas/: canvas.psh  canvas.vsh  canvasRaymarcher.psh  sdfScene.fxh
test/standalone/ComputeParticles/assets/shaders/cube/: cube.psh  cube.vsh
test/standalone/ComputeParticles/assets/shaders/particles/: collide_particles.csh  interact_particles.csh  move_particles.csh  particle.psh  particle.vsh  particle_solid.psh  particle_solid.vsh  particle_sprite.psh  particle_sprite.vsh  particles.fxh  reset_particle_lists.csh  structures.fxh
test/standalone/ComputeParticles/assets/shaders/particles/backup/before_flocking/: collide_particles.csh
test/standalone/ComputeParticles/assets/shaders/post/: post_process.psh
test/standalone/ComputeParticles/assets/shaders/post/aa/: fxaa.psh  fxaa.vsh
test/standalone/ComputeParticles/assets/shaders/solids/: solid.psh  solid.vsh
test/standalone/ComputeParticles/src/: AppGlobal.h  ComputeParticles.cpp  ComputeParticles.hpp  Cube.cpp  Cube.h  Solids.cpp  Solids.h  SolidsOriginal.cpp  SolidsOriginal.h
test/standalone/InstancedCubes/: CMakeLists.txt  readme.md
test/standalone/InstancedCubes/src/: InstancedCubes.cpp  InstancedCubes.hpp
test/standalone/Terrain/: CMakeLists.txt  readme.md
test/standalone/Terrain/assets/: cube.gsh  cube.psh  cube.vsh  rendertarget.psh
test/standalone/Terrain/assets/shaders/: cube.psh  cube.vsh  rendertarget.psh
test/standalone/Terrain/src/: Terrain.cpp  Terrain.hpp
test/standalone/TutorialFromCube/: CMakeLists.txt  readme.md
test/standalone/TutorialFromCube/assets/: cube.psh  cube.vsh  cube_inst.vsh
test/standalone/TutorialFromCube/src/: TutorialFromCube.cpp  TutorialFromCube.hpp
test/standalone/common/shaders/post/aa/: fxaa.psh
test/standalone/common/src/: Canvas.cpp  Canvas.h  FileWatch-Monkman.hpp  FileWatch.h  FileWatch.hpp  LivePP.cpp  LivePP.h  Profiler.cpp  Profiler.h
test/standalone/common/src/post/aa/: FXAA.cpp  FXAA.h
tools/: diligent-playground.sublime-project
tools/LivePP/: livepp.json
tools/LivePP/API/: LPP_API.h  LPP_API_Hooks.h  LPP_API_Options.h  LPP_API_Preferences.h  LPP_API_Version_x64_CPP.h  LPP_API_x64_CPP.h  version_x64_CPP.txt
tools/LivePP/Broker/: global_preferences.json
